v2.1.x-SNAPSHOT/connectors/database/sap-hana.mdx
---
title: SAP HANA Connector | OpenMetadata High-Performance DB
description: Connect SAP HANA to OpenMetadata effortlessly with our comprehensive database connector guide. Setup instructions, configuration steps, and troubleshoot...
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.1.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/saphana.webp'
name="SAP HANA"
stage="PROD"
availableFeatures={["Metadata", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "dbt", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Query Usage", "Stored Procedures", "Owners", "Tags"]} />
In this section, we provide guides and references to use the SAP HANA connector.
Configure and schedule SAP HANA metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Data Profiler](/v2.1.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Lineage](/v2.1.x-SNAPSHOT/how-to-guides/data-lineage/workflow)
- [Data Quality](/v2.1.x-SNAPSHOT/how-to-guides/data-quality-observability/quality)
- [dbt Integration](/v2.1.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.1.x-SNAPSHOT/connectors/database/sap-hana/troubleshooting)

## Requirements

Before configuring the SAP HANA connector, make sure the following requirements are in place.

<Tip>
The connector is compatible with HANA or HANA express versions since HANA SPS 2.
</Tip>

### Metadata

To extract metadata the user used in the connection needs to have access to the `SYS` schema.
You can create a new user to run the ingestion with:
```SQL
CREATE USER openmetadata PASSWORD Password123;
```
And, if you have password policies forcing users to reset the password, you can disable that policy for this technical user with:
```SQL
ALTER USER openmetadata DISABLE PASSWORD LIFETIME;
```
Note that in order to get the metadata for **Calculation Views**, **Analytics Views** and **Attribute Views** authored in the classic repository, you need to have enough
permissions on the `_SYS_BIC` schema, where on-premise and HANA Express instances expose them as runtime views. You can grant the required permissions to the user by running the following SQL commands:
```SQL
GRANT SELECT ON SCHEMA _SYS_BIC TO <user_or_role>;
```
Views deployed through an **HDI container** are not exposed there. HANA deploys an HDI container's runtime objects into a schema generated for that container instead, so grant `SELECT` on that container's own schema to see those views.

### Lineage

SAP HANA lineage comes from three places, each covering a different kind of relationship, so the grants you need depend on the lineage you expect to see.

| Lineage | Read from | Grant required |
|---|---|---|
| View lineage, including column level | View definitions captured by metadata ingestion | `SELECT` on `SYS`, already required for metadata |
| Table-to-table, from `INSERT INTO ... SELECT` and similar | `SYS.M_SQL_PLAN_CACHE`, or a configured `queryLogFilePath` instead | `CATALOG READ`, only when reading the plan cache |
| Classic repository model lineage | `_SYS_REPO.ACTIVE_OBJECT` | `SELECT` on that object |

```SQL
-- Table-to-table lineage. Without this the ingestion user sees only the statements
-- it ran itself, so the lineage workflow finds nothing to parse. Note this is a system
-- privilege: it lifts row filtering from the monitoring and system views the user can
-- reach, not just SYS.M_SQL_PLAN_CACHE. Grant it deliberately.
GRANT CATALOG READ TO <user_or_role>;

-- Classic repository models. On-premise and HANA Express only. Granted on the single
-- object the connector reads rather than the whole schema.
GRANT SELECT ON _SYS_REPO.ACTIVE_OBJECT TO <user_or_role>;
```

<Note>
**SAP HANA Cloud.** `_SYS_REPO` is the classic HANA repository, which was never carried into SAP HANA Cloud, so that grant does not apply there and the lineage workflow logs an informational message saying the schema is absent. This affects only classic-repository-authored Calculation, Analytic, and Attribute views: HANA Cloud never produces lineage for them, same as it never exposes them for metadata (see above). View, column-level, and table-to-table lineage from ordinary tables and views are unaffected. Views deployed through an HDI container aren't read by this pass either, on any HANA edition: see [Troubleshooting](/v2.1.x-SNAPSHOT/connectors/database/sap-hana/troubleshooting#_sys_repo-not-present) for what that means for their lineage.
</Note>

<Note>
**`CREATE TABLE ... AS SELECT` is not captured from the plan cache.** `SYS.M_SQL_PLAN_CACHE` holds execution plans and therefore never contains DDL, so a table populated by `CREATE TABLE ... AS SELECT` has no upstream lineage when read from there. Populating it with `INSERT INTO ... SELECT` instead makes the relationship visible. If you configure `queryLogFilePath` to read statements from a file instead of the plan cache, that limitation doesn't apply: the shared query parser recognizes `CREATE TABLE ... AS SELECT` from a log file like it does for other connectors.
</Note>

Lineage also requires that the metadata workflow has already run, because view lineage is resolved against the tables and views that ingestion has registered. Run metadata ingestion before the lineage workflow on a new service.

### Profiler & Data Quality

Executing the profiler workflow or data quality tests, will require the user to have `SELECT` permission on the tables/schemas where the profiler/tests will be executed. The user should also be allowed to view information in `tables` for all objects in the database. More information on the profiler workflow setup can be found [here](/v2.1.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow) and data quality tests [here](/v2.1.x-SNAPSHOT/how-to-guides/data-quality-observability/quality).

## Metadata Ingestion

To ingest metadata from SAP HANA, you need to create a service connection. The service connects SAP HANA with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **SAP HANA** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/sap-hana.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other SAP HANA services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/sap-hana.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for SAP HANA. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/sap-hana.png)

We support two possible connection types:
1. **SQL Connection**, where you will provide the username, password and host.
2. **HDB User Store** [connection](https://help.sap.com/docs/SAP_HANA_PLATFORM/b3ee5778bc2e4a089d3299b82ec762a7/dd95ac9dbb571014a7d7f0234d762fdb.html?version=2.0.05&locale=en-US). Note that the HDB Store will need to be locally available to the instance running the ingestion process. If you are unsure about this setting, you can run the ingestion process passing the usual SQL connection details.

**SQL Connection**
- **Host and Port**: Host and port of the SAP HANA service. This should be specified as a string in the format `hostname:port`. For example, `localhost:39041`, `host.docker.internal:39041`.
- **Username**: Specify the User to connect to SAP HANA. It should have enough privileges to read all the metadata.
- **Password**: Password to connect to SAP HANA.
- **database**: Optional parameter to connect to a specific database.
- **databaseSchema**: databaseSchema of the data source. This is an optional parameter, if you would like to restrict the metadata reading to a single schema. When left blank, OpenMetadata ingestion attempts to scan all the schemas.

**HDB User Store**
- **User Key**: HDB Store User Key generated from the command `hdbuserstore SET <KEY> <host:port> <USERNAME> <PASSWORD>`.

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
